--- a/src/App.module.css
+++ b/src/App.module.css
@@ -58,6 +58,9 @@
 	font-weight: 400;
 	color: #FFF;
 } */
+.ant-layout-header {
+	background: #fff;
+}
 .ant-layout-header.a {
 	background: "#fff";
 }
