--- a/src/App.module.css
+++ b/src/App.module.css
@@ -60,17 +60,32 @@
 } */
 .ant-layout-header {
 	background: #fff;
+	/* position: fixed;
+	left: 0;
+	top: 0; */
+	/* width: 100%; */
+	/* height: 56px; */
+	/* padding: 0; */
+	/* background: #673AB7; */
+	/* box-shadow: 0 0 5px rgba(0, 0, 0, 0.5); */
+	/* z-index: 50; */
 }
-.ant-layout-header.a {
-	background: "#fff";
+.ant-layout-header h1 {
+	float: left;
+	margin: 0;
+	padding: 0 15px;
+	font-size: 24px;
+	line-height: 56px;
+	font-weight: 400;
+	color: #000;
 }
 	
-.ant-layout-header.a .nav {
+.ant-layout-header nav {
 	float: right;
 	font-size: 100%;
 }
 
-.ant-layout-header.a .nav a {
+.ant-layout-header nav a {
 	display: inline-block;
 	height: 56px;
 	line-height: 56px;
@@ -79,15 +94,15 @@
 	text-align: center;
 	background: rgba(255,255,255,0);
 	text-decoration: none;
-	color: #FFF;
+	color: #000;
 	will-change: background-color;
 }
 
-.ant-layout-header.a .nav a:hover,
-.ant-layout-header.a .nav a:active {
+.ant-layout-header nav a:hover,
+.ant-layout-header nav a:active {
 	background: rgba(0,0,0,0.2);
 }
 
-.ant-layout-header.a .nav a.active {
+.ant-layout-header nav a.active {
 	background: rgba(0,0,0,0.4);
 }
